--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "expo": "~52.0.33",
+    "expo-sensors": "~14.0.2",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
